--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
             <h1>Notes App</h1>
         </header>
         <main>
-            <div id="fileNav"></div>
+            <div id="fileNav">
+                <button id="newBtn">New Note</button>
+                <ul id="fileList"></ul>
+            </div>
             <div id="editor">
                 <div id="toolbar">
+                    <input id="titleInput" type="Text">
                     <button id="saveBtn">Save</button>
                     <button id="boldBtn"><b>B</b></button>
                     <button id="italicsBtn"><i>I</i></button>
                     <button id="underlineBtn"><u>U</u></button>
+                    <button id="deleteBtn">Delete</button>
                 </div>
                 <!--The text editor area is contained in an iframe. An iframe contains a separate html document that can be edited
                 documentation: https://developer.mozilla.org/en-US/docs/Web/API/HTMLIFrameElement-->
@@ -28,6 +33,7 @@
             <p>Sam Richter | ISTC 2330 Cross Platform Mobile Apps | Fall `25</p>
         </footer>
 
+        <script src="noteNode.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
