Reworked file navigation styling and added a date

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <button id="italicsBtn"><i>I</i></button>
                     <button id="underlineBtn"><u>U</u></button>
                     <button id="deleteBtn">Delete</button>
+                    <time id="createdDate"></time>
                 </div>
                 <!--The text editor area is contained in an iframe. An iframe contains a separate html document that can be edited
                 documentation: https://developer.mozilla.org/en-US/docs/Web/API/HTMLIFrameElement-->
