Added a primitive folder system and a bucket that allows for more than one top level note. Added basic UX by disabling buttons depending on selected node type

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         </header>
         <main>
             <div id="fileNav">
-                <button id="newBtn">New Note</button>
-                <ul id="fileList"></ul>
+                <div id="fileBar">
+                    <button id="newBtn">New note</button>
+                    <button id="newFolderBtn">New Folder</button>
+                </div>
+                <div id="fileBox">
+                    <ul id="fileList"></ul>
+                </div>
             </div>
             <div id="editor">
                 <div id="toolbar">
