--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta lang="en">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <header>
@@ -15,6 +16,7 @@
                 <div id="fileBar">
                     <button id="newBtn">New note</button>
                     <button id="newFolderBtn">New Folder</button>
+                    <hr>
                 </div>
                 <div id="fileBox">
                     <ul id="fileList"></ul>
