--- a/index.html
+++ b/index.html
@@ -43,5 +43,13 @@
 
         <script src="noteNode.js"></script>
         <script src="script.js"></script>
+
+        <script>
+            if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('./service-worker.js')
+                .then(() => console.log('✅ Service Worker registered'))
+                .catch(err => console.error('SW registration failed:', err));
+            }
+        </script>
     </body>
 </html>
